--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.22.0
-numpy==1.24.3
-pandas==1.5.3
-matplotlib==3.7.1
-Pillow==9.5.0
+streamlit=>1.33.0
+pandas=>2.2.2
+numpy=>1.26.4
+matplotlib=>3.8.4
+scikit-learn=>1.4.2
